Update HR data analysis.ipynb

--- a/HR data analysis.ipynb
+++ b/HR data analysis.ipynb
@@ -4766,7 +4766,7 @@
    "id": "adjacent-spokesman",
    "metadata": {},
    "source": [
-    "## Looking into colinearity among predictor variables"
+    "## Looking into collinearity among predictor variables"
    ]
   },
   {
