Update HR data analysis.ipynb

--- a/HR data analysis.ipynb
+++ b/HR data analysis.ipynb
@@ -4815,7 +4815,7 @@
    "id": "lonely-glasgow",
    "metadata": {},
    "source": [
-    "##### From the above Heat Map we can see that some variables have quite high correlation coefficients. This should be taken into consideration in further analysis in order to eliminate posible colinearity among predictor variables. "
+    "##### From the above Heat Map we can see that some variables have quite high correlation coefficients. This should be taken into consideration in further analysis in order to eliminate possible collinearity among predictor variables. "
    ]
   },
   {
@@ -5159,7 +5159,7 @@
    "id": "rolled-fellow",
    "metadata": {},
    "source": [
-    "#### Calculating VIF (Variance Inflation Factor) in order to eliminate variables with high colinearity"
+    "#### Calculating VIF (Variance Inflation Factor) in order to eliminate variables with high collinearity"
    ]
   },
   {
